<resources>
    <string name="app_name">tscharts-lib</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>

    <string name="JAN">JAN</string>
    <string name="FEB">FEB</string>
    <string name="MAR">MAR</string>
    <string name="APR">APR</string>
    <string name="MAY">MAY</string>
    <string name="JUN">JUN</string>
    <string name="JUL">JUL</string>
    <string name="AUG">AUG</string>
    <string name="SEP">SEP</string>
    <string name="OCT">OCT</string>
    <string name="NOV">NOV</string>
    <string name="DEC">DEC</string>

    <string name="label_vaccine_category_covid19">COVID-19</string>
    <string name="label_vaccine_category_chickenpox">Chickenpox</string>
    <string name="label_vaccine_category_diphtheria">Diphtheria, tetanus, and pertussis</string>
    <string name="label_vaccine_category_hib">Haemophilus influenzae type b (Hib)</string>
    <string name="label_vaccine_category_hepatitis">Hepatitis</string>
    <string name="label_vaccine_category_flu">Influenza (Flu)</string>
    <string name="label_vaccine_category_mmr">Measles, mumps, and rubella</string>
    <string name="label_vaccine_category_polio">Polio</string>
    <string name="label_vaccine_category_pneumococcal">Pneumococcal</string>
    <string name="label_vaccine_category_rotavirus">Rotavirus</string>
    <string name="label_vaccine_category_meningococcal">Meningococcal disease, meningitis</string>


    <string name="label_vaccine_covid19">COVID-19 vaccine</string>
    <string name="label_vaccine_covid19_dosages">Number of COVID-19 dosages received</string>
    <string name="label_vaccine_covid19_date">Date of most recent COVID-19 dosage</string>
    <string name="label_vaccine_covid19_booster">COVID-19 booster</string>
    <string name="label_vaccine_covid19_booster_date">Date of most recent COVID-19 booster</string>
    <string name="label_vaccine_dtap">(DTAP) Diphtheria, tetanus, and acellular pertussis vaccine</string>
    <string name="label_vaccine_dtap_date">Date of DTAP</string>
    <string name="label_vaccine_dt">(DT) Diphtheria, tetanus vaccine</string>
    <string name="label_vaccine_dt_date">Date of DT</string>
    <string name="label_vaccine_hib">(HIB) Haemophilus influenzae type B vaccine</string>
    <string name="label_vaccine_hib_date">Date of HIB</string>
    <string name="label_vaccine_hepa">(HEPA) Hepatitis A vaccine</string>
    <string name="label_vaccine_hepa_date">Date of HEPA</string>
    <string name="label_vaccine_hepb">(HEPB) Hepatitis B vaccine</string>
    <string name="label_vaccine_hepb_date">Date of HEPB</string>
    <string name="label_vaccine_hpv">(HPV) Human papillomavirus vaccine</string>
    <string name="label_vaccine_hpv_date">Date of HPV</string>
    <string name="label_vaccine_iiv">(IIV) Influenza vaccine (inactivated)</string>
    <string name="label_vaccine_iiv_date">Date of IIV</string>
    <string name="label_vaccine_laiv4">(LAIV4) Influenza vaccine (live, attenuated)</string>
    <string name="label_vaccine_laiv4_date">Date of LAIV4</string>
    <string name="label_vaccine_mmr">(MMR) Measles, mumps, and rubella vaccine</string>
    <string name="label_vaccine_mmr_date">Date of MMR</string>
    <string name="label_vaccine_menacwy">(MENACWY) Meningococcal serogroups A, C, W, Y vaccine</string>
    <string name="label_vaccine_menacwy_date">Date of MENACWY</string>
    <string name="label_vaccine_menb">(MENB) Meningococcal serogroup B vaccine</string>
    <string name="label_vaccine_menb_date">Date of MENB</string>
    <string name="label_vaccine_pcv13">(PCV13) Pneumococcal 13-valent conjugate vaccine</string>
    <string name="label_vaccine_pcv13_date">Date of PCV13</string>
    <string name="label_vaccine_ppsv23">(PPSV23) Pneumococcal 23-valent polysaccharide vaccine</string>
    <string name="label_vaccine_ppsv23_date">Date of PPSV23</string>
    <string name="label_vaccine_ipv">(IPV) Poliovirus vaccine (inactivated)</string>
    <string name="label_vaccine_ipv_date">Date of IPV</string>
    <string name="label_vaccine_rv">(RV) Rotavirus vaccine</string>
    <string name="label_vaccine_rv_date">Date of RV</string>
    <string name="label_vaccine_tap">(TAP) Tetanus, diphtheria, and acellular pertussis vaccine</string>
    <string name="label_vaccine_tap_date">Date of TAP</string>
    <string name="label_vaccine_td">(TD) Tetanus and diphtheria vaccine</string>
    <string name="label_vaccine_td_date">Date of TD</string>
    <string name="label_vaccine_var">(VAR) Varicella vaccine</string>
    <string name="label_vaccine_var_date">Date of VAR</string>
    <string name="label_vaccine_dtap_hepb_ipv">(DTAP HEPB IPV) DTaP, hepatitis B, and inactivated poliovirus vaccine</string>
    <string name="label_vaccine_dtap_hepb_ipv_date">Date of DTAP HEPB IPV</string>
    <string name="label_vaccine_dtap_ipv_hib">(DTAP IPV HPV) DTaP, inactivated poliovirus, and Haemophilus influenzae type B vaccine</string>
    <string name="label_vaccine_dtap_ipv_hib_date"> Date of DTAP IPV HPV</string>
    <string name="label_vaccine_dtap_ipv">(DTAP IPV) DTaP and inactivated poliovirus vaccine</string>
    <string name="label_vaccine_dtap_ipv_date">Date of DTAP IPV</string>
    <string name="label_vaccine_dtap_ipv_hib_hepb">(DTAP IPV HIB HEPB) DTaP, inactivated poliovirus, Haemophilus influenzae type b, and hepatitis B vaccine</string>
    <string name="label_vaccine_dtap_ipv_hib_hepb_date">Date of DTAP IPV HIB HEPB</string>
    <string name="label_vaccine_mmvr">(MMVR) Measles, mumps, rubella, and varicella vaccines</string>
    <string name="label_vaccine_mmvr_date">Date of MMVR</string>
    <string name="label_date">Date</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="msg_unable_to_get_vaccination">Unable to get vaccination data</string>
    <string name="msg_successfully_got_vaccination">Successfully read vaccination data</string>
    <string name="msg_unable_to_update_vaccination">Unable to update vaccination</string>
    <string name="msg_successfully_updated_vaccination">Successfully updated vaccination</string>

    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_ok">Ok</string>
    <string name="title_missing_patient_data">Missing Patient Data</string>
    <string name="msg_please_enter_required_patient_data">Please enter required patient data</string>
    <string name="title_unsaved_vaccinations">Unsaved vaccination data</string>
    <string name="msg_save_vaccinations">Save changes to vaccination data?</string>
    <string name="msg_unable_to_save_vaccination">Unable to save vaccinations</string>
    <string name="msg_successfully_saved_vaccination">Successfully saved vaccinations</string>
    <string name="section_title_vaccines">Vaccinations</string>
    <string name="label_vaccine_category_combination">Combination Vaccines</string>

    <string name="title_covid19_type_dialog">Please select a COVID-19 vaccine</string>
    <string name="select_covid19_type_select">Select</string>
    <string name="select_covid19_type_cancel">Cancel</string>
    <string name="title_select_covid19_type_dialog">Select COVID-19 Vaccine</string>
    <string name="label_vaccine_covid19_type">COVID-19 vaccine type</string>
    <string name="button_label_print_wristband">Print Wristband</string>
    <string name="ip_address">IP Address:</string>
    <string name="port">Port:</string>
    <string name="printer_status">Printer Status:</string>
    <string name="job_status">Job Status:</string>
    <string name="msg_printer_is_online">Printer is online</string>
    <string name="msg_printer_is_offline">Printer is offine</string>
    <string name="msg_printer_is_printing">printer is printing</string>
    <string name="msg_printer_is_jammed">printer is jammed</string>
    <string name="msg_printer_is_out_of_paper">printer is out of paper</string>
    <string name="msg_printer_is_idle">printer is idle</string>
    <string name="msg_printer_is_restarting">printer is restarting</string>
    <string name="msg_wristband_printed_successfully">wristband printed successfully</string>
    <string name="msg_wristband_failed_to_print">wristband failed to print</string>
    <string name="msg_printer_unknown_status">unknown printer status</string>
    <string name="title_printer_success">Printer Job Successful</string>
    <string name="title_printer_error">Print Job Failed</string>
    <string name="title_printer_status_change">Printer Status Change</string>
    <string name="title_connection_status_change">Printer Connection Status Change</string>
    <string name="msg_print_job_success">Print Job %d Success! Status: %s</string>
    <string name="msg_print_job_failed">Print Job %d Failed! Status: %s Message: %s</string>
    <string name="title_print_wristband">Print Wristband</string>
    <string name="msg_select_number_of_wristbands">Select Number Of Wristbands to Print</string>
    <string name="print_one_wristband">Print One Wristband</string>
    <string name="label_cancel">Cancel</string>
    <string name="print_two_wristbands">Print Two Wristbands</string>
    <string name="network">Network</string>
</resources>
